--- a/MDK-ARM/AD9850_FreeRTOS.uvprojx
+++ b/MDK-ARM/AD9850_FreeRTOS.uvprojx
@@ -453,6 +453,16 @@
               <FileType>1</FileType>
               <FilePath>F:\data\CubeMx_Keil\AD9850_FreeRTOS\Core\Src\usart.c</FilePath>
             </File>
+            <File>
+              <FileName>pwm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\pwm.c</FilePath>
+            </File>
+            <File>
+              <FileName>delay.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\delay.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
